@startuml

skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor white
    ArrowColor black
    BorderColor gray
}

abstract class Kode {
    -nama: String
    -kode: String
    +validasiNama(nama: String): void
    +validasiKode(kode: String): void
    +getNama(): String
    +setNama(nama: String): void
    +setKode(kode: String): void
}

class DPP {
    - status: int
    - deskripsiStatus: String
    - kunjungan: int
    - deskripsiKunjungan: String
    + DPP()
    + DPP(status: int, kunjungan: int)
    + getStatus(): int
    + setStatus(status: int): void
    + getKunjungan(): int
    + setKunjungan(kunjungan: int): void
    + toString(): String
}

class KIP {
    - kju: String
    - noUrut: Integer
    - kodeProv: KodeProv
    - kodeKab: KodeKab
    - kodeKec: KodeKec
    --
    + KIP()
    + KIP(KodeProv, KodeKab)
    + KIP(String, Integer, KodeProv, KodeKab, KodeKec)
    + getKju(): String
    + setKju(String): void
    + getNoUrut(): Integer
    + setNoUrut(Integer): void
    + getKodeProv(): KodeProv
    + setKodeProv(KodeProv): void
    + getKodeKab(): KodeKab
    + setKodeKab(KodeKab): void
    + getKodeKec(): KodeKec
    + setKodeKec(KodeKec): void
    + toString(): String
}

class KodeKab {
    -kode: String
    -nama: String
    -listKodeKec: List<KodeKec>
    +KodeKab(kode: String, nama: String)
    +KodeKab()
    +getKode(): String
    +validasiKode(kode: String): void
    +validasiNama(nama: String): void
    +getListKodeKec(): List<KodeKec>
    +addKodeKec(kodeKec: KodeKec): void
    +toString(): String
}

class KodeKec {
    -kode: String
    -nama: String
    +KodeKec()
    +KodeKec(kode: String, nama: String)
    +getKode(): String
    +validasiKode(kode: String): void
    +validasiNama(nama: String): void
    +toString(): String
}


class KodeProv {
    -nama: String
    -kode: String
    -listKodeKab: List<KodeKab>
    +KodeProv(nama: String, kode: String)
    +KodeProv()
    +getKode(): String
    +getListKodeKab(): List<KodeKab>
    +addKodeKab(kodeKab: KodeKab): void
    +validasiNama(nama: String): void
    +validasiKode(kode: String): void
    +toString(): String
}

class Perusahaan {
    - KIP kodeWilayah
    - String nama
    - String alamat
    - List<String> noTelp
    - int bbhu
    - DPP dpp
    - Subsektor subsektor
    - String usahaUtama
    - String faksimili
    - String deskripsiBbhu
    - String deskripsiUsahaUtama
    + Perusahaan()
    + getFaksimili(): String
    + setFaksimili(faksimili: String): void
    + getKodeWilayah(): KIP
    + setKodeWilayah(kodeWilayah: KIP): void
    + getNama(): String
    + setNama(nama: String): void
    + getAlamat(): String
    + setAlamat(alamat: String): void
    + getNoTelp(): List<String>
    + addNoTelp(noTelp: String): void
    + getBbhu(): int
    + setBbhu(bbhu: int): void
    + getDpp(): DPP
    + setDpp(dpp: DPP): void
    + getSubsektor(): Subsektor
    + setSubsektor(subsektor: Subsektor): void
    + getUsahaUtama(): String
    + setUsahaUtama(usahaUtama: String): void
}

class Subsektor {
    - tanamPangan: Integer
    - hortikultura: Integer
    - peternakan: Integer
    - kehutanan: Integer
    - perikanan: Integer
    - kodePerkebunan: String
    - jenisPerkebunan: String
    
    + toString(): String
    + getHortikultura(): Integer
    + setHortikultura(hortikultura: Integer): void
    + getTanamPangan(): Integer
    + setTanamPangan(tanamPangan: Integer): void
    + getPeternakan(): Integer
    + setPeternakan(peternakan: Integer): void
    + getKehutanan(): Integer
    + setKehutanan(kehutanan: Integer): void
    + getPerikanan(): Integer
    + setPerikanan(perikanan: Integer): void
    + validasiId(kode: Integer): Integer
    + getJenisPerkebunan(): String
    + getKodePerkebunan(): String
    + setKodePerkebunan(kodePerkebunan: String): void
}

Kode <|-- KodeProv
Kode <|-- KodeKab
Kode <|-- KodeKec

abstract class Form {
    - errorMessages: List<String>
    + validate(): void
    + addErrorMessages(errorMessage: String): void
    + getErrorMessages(): List<String>
}

class KuesionerDPP {
    - kodeProv: KodeProv
    - kodeKab: KodeKab
    - periodeData: int
    - jumlahPerusahaan: int
    - listPerusahaan: List<Perusahaan>
    + KuesionerDPP()
    + KuesionerDPP(kodeProv: KodeProv, kodeKab: KodeKab)
    + getKodeProv(): KodeProv
    + getKodeKab(): KodeKab
    + setKodeProv(kodeProv: KodeProv): void
    + setKodeKab(kodeKab: KodeKab): void
    + getPeriodeData(): int
    + setPeriodeData(periodeData: int): void
    + getListPerusahaan(): List<Perusahaan>
    + addPerusahaan(perusahaan: Perusahaan): void
    + totalPerusahaan(): void
    + validateKodeKec(listKodeKec: List<KodeKec>, kodeKec: KodeKec): boolean
    + cekKonten(subsektor: Subsektor): Boolean
    + validasiNolSatu(x: int): boolean
    + cekDuplikasiDuaPerusahaan(perusahaan1: Perusahaan, perusahaan2: Perusahaan): boolean
    + cekDuplikasi(): boolean
    + cekDuplikasiObjek(): void
    + validate(): void
    + getTotalPerusahaan(): void
}

KuesionerDPP --|> Form
KuesionerDPP *-- Perusahaan
Perusahaan *-- DPP
Perusahaan *-- KIP
Perusahaan *-- KodeProv
Perusahaan *-- KodeKab
Perusahaan *-- KodeKec
Perusahaan *-- Subsektor


@enduml
